finshed the main layout of the calc

--- a/index.html
+++ b/index.html
@@ -12,26 +12,28 @@
     <div class="calcContainer">
         <div class="topRow">
             <p class="clear">C</p>
-            <div class="answer"></div>
+            <div class="answer"><span class="calcDisplay">10</span></div>
         </div>
+        <p class="numberPad">7</p>
+        <p class="numberPad">8</p>
+        <p class="numberPad">9</p>
+        <p class="numberPad">/</p>
+        <p class="numberPad">4</p>
+        <p class="numberPad">5</p>
+        <p class="numberPad">6</p>
+        <p class="numberPad">X</p>
         <p class="numberPad">1</p>
-        <p class="numberPad">1</p>
-        <p class="numberPad">1</p>
-        <p class="numberPad">1</p>
-        <p class="numberPad">1</p>
-        <p class="numberPad">1</p>
-        <p class="numberPad">1</p>
-        <p class="numberPad">1</p>
-        <p class="numberPad">1</p>
-        <p class="numberPad">1</p>
-        <p class="numberPad">1</p>
-        <p class="numberPad">1</p>
-        <p class="numberPad">1</p>
-        <p class="numberPad">1</p>
-        <p class="numberPad">1</p>
-        <p class="numberPad">1</p>
+        <p class="numberPad">2</p>
+        <p class="numberPad">3</p>
+        <p class="numberPad">-</p>
+        <p class="numberPad">0</p>
+        <p class="numberPad">.</p>
+        <p class="numberPad">=</p>
+        <p class="numberPad">+</p>
     </div>
 
+
+<p>
 
     <script src="main.js"></script>
 </body>
