--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div class="calcContainer">
         <div class="topRow">
-            <p class="clear">C</p>
-            <div class="answer"><span class="calcDisplay">10</span></div>
+            <p class="clear numberPad">C</p>
+            <div class="answer"><span class="calcDisplay"></span></div>
         </div>
         <p class="numberPad">7</p>
         <p class="numberPad">8</p>
