--- a/SimpleVersion/index.html
+++ b/SimpleVersion/index.html
@@ -5,6 +5,7 @@
     <title></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:200i,300,300i" rel="stylesheet">
     <link href="main.css" rel="stylesheet">
 </head>
 
@@ -17,19 +18,19 @@
         <p class="numberPad">7</p>
         <p class="numberPad">8</p>
         <p class="numberPad">9</p>
-        <p class="numberPad">/</p>
+        <p class="numberPad operator">/</p>
         <p class="numberPad">4</p>
         <p class="numberPad">5</p>
         <p class="numberPad">6</p>
-        <p class="numberPad">X</p>
+        <p class="numberPad operator">X</p>
         <p class="numberPad">1</p>
         <p class="numberPad">2</p>
         <p class="numberPad">3</p>
-        <p class="numberPad">-</p>
+        <p class="numberPad operator">-</p>
         <p class="numberPad">0</p>
         <p class="numberPad">.</p>
         <p class="numberPad">=</p>
-        <p class="numberPad">+</p>
+        <p class="numberPad operator">+</p>
     </div>
 
 
