putting the final touches on the simple calc

--- a/SimpleVersion/index.html
+++ b/SimpleVersion/index.html
@@ -5,31 +5,30 @@
     <title></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:200i,300,300i" rel="stylesheet">
     <link href="main.css" rel="stylesheet">
 </head>
 
 <body>
     <div class="calcContainer">
         <div class="topRow">
-            <p class="clear numberPad">C</p>
+            <p class="clear numberPad right">C</p>
             <div class="answer"><span class="calcDisplay"></span></div>
         </div>
-        <p class="numberPad">7</p>
-        <p class="numberPad">8</p>
-        <p class="numberPad">9</p>
-        <p class="numberPad operator">/</p>
-        <p class="numberPad">4</p>
-        <p class="numberPad">5</p>
-        <p class="numberPad">6</p>
-        <p class="numberPad operator">X</p>
-        <p class="numberPad">1</p>
-        <p class="numberPad">2</p>
-        <p class="numberPad">3</p>
-        <p class="numberPad operator">-</p>
+        <p class="numberPad bottom">7</p>
+        <p class="numberPad sides bottom">8</p>
+        <p class="numberPad right bottom">9</p>
+        <p class="numberPad operator bottom">/</p>
+        <p class="numberPad bottom">4</p>
+        <p class="numberPad sides bottom">5</p>
+        <p class="numberPad right bottom">6</p>
+        <p class="numberPad operator bottom">X</p>
+        <p class="numberPad bottom">1</p>
+        <p class="numberPad sides bottom">2</p>
+        <p class="numberPad right bottom">3</p>
+        <p class="numberPad operator bottom">-</p>
         <p class="numberPad">0</p>
-        <p class="numberPad">.</p>
-        <p class="numberPad">=</p>
+        <p class="numberPad sides">.</p>
+        <p class="numberPad right">=</p>
         <p class="numberPad operator">+</p>
     </div>
 
